# cricket

./: .dockerignore  .env.example  .envrc  .gitignore  .gitlint  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  TODO.txt  celerybeat-schedule  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  postgrad.xml  pyproject.toml  test_kaleido_celery.py  test_kaleido_db.py  test_kaleido_double.py  test_kaleido_simple.py  www.postgrad.com-20260528T115009.json  www.postgrad.com-app.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: admin.py  api.py  auth.py  errors.py  models.py  pagination.py  schemas.py
apps/api/migrations/: 0001_initial.py
apps/api/routers/: audits.py  feedback.py  introspection.py  jobs.py  pages.py  sites.py  snapshots.py
apps/core/views/: __init__.py  index.py
apps/headers/: apps.py  tasks.py  urls.py
apps/headers/admin/: page.py  snapshot.py
apps/headers/migrations/: 0001_initial.py
apps/headers/models/: __init__.py  page.py  snapshot.py
apps/lighthouse/: apps.py  tasks.py  urls.py
apps/lighthouse/admin/: __init__.py  audit.py  page.py  site.py  snapshot.py
apps/lighthouse/management/commands/: prune_old_reports.py
apps/lighthouse/migrations/: 0001_initial.py  0002_snapshot_webhook_url.py
apps/lighthouse/models/: __init__.py  audit.py  page.py  rating.py  site.py  snapshot.py
apps/lighthouse/templates/lighthouse/page/: detail.html  list.html
apps/lighthouse/templates/lighthouse/site/: list.html  snapshots.html
apps/lighthouse/templates/lighthouse/snapshot/: detail.html
apps/lighthouse/templatetags/: lighthouse.py
apps/lighthouse/views/: page.py  site.py  snapshot.py
apps/metrics/: tasks.py  urls.py
apps/metrics/admin/: page.py
apps/metrics/migrations/: 0002_remove_site_config_file_site_config.py  0003_alter_page_id_alter_site_config_alter_site_id_and_more.py  0004_page_html_report.py
apps/metrics/models/: page.py  rating.py  site.py  snapshot.py
apps/metrics/templates/metrics/page/: detail.html  list.html
apps/metrics/templates/metrics/reports/: audit-ratings.html  audit-score-urls.html  category-checklist.html  category-score-urls.html
apps/metrics/templates/metrics/site/: list.html  snapshots.html
apps/metrics/templates/metrics/snapshot/: category-ratings.html  index.html
apps/metrics/templatetags/: metrics.py
apps/metrics/views/: page.py  site.py  snapshot.py
apps/pageweight/: apps.py  tasks.py  urls.py
apps/pageweight/admin/: __init__.py  page.py  snapshot.py
apps/pageweight/migrations/: 0001_initial.py
apps/pageweight/models/: __init__.py  page.py  snapshot.py
apps/sites/: apps.py  tasks.py
apps/sites/admin/: __init__.py  site.py  snapshot.py
apps/sites/migrations/: 0001_initial.py
apps/sites/models/: __init__.py  site.py  snapshot.py
assets/css/: site.css
backend/: Dockerfile
backend/metrics/: apps.py  tasks.py
backend/metrics/admin/: __init__.py  page.py  site.py  snapshot.py
backend/metrics/migrations/: 0001_initial.py
backend/metrics/models/: __init__.py  page.py  rating.py  site.py  snapshot.py
backend/metrics/templates/metrics/reports/: audit-score-graph.html  category-checklist.html  category-ratings.html  category-score-graph.html  index.html
backend/project/: celery.py  settings.py
backend/project/templates/: base.html
backend/requirements/: development.in  development.txt  docs.txt  production.in  production.txt  tests.in  tests.txt
backend/tests/factories/: page.py  site.py  snapshot.py
backend/tests/metrics/: test_sitemaps.py  test_snapshots.py
config/: celery.py  settings.py  urls.py
docs/: SKILLS.md  api-design.md  index.rst
docs/howtos/: using-docker.rst
node/: package-lock.json  package.json
node/src/: lighthouse.js  pageweight.js
requirements/: development.txt  production.in
templates/: base.html
tests/: conftest.py  test_kaleido_celery2.py
tests/api/: conftest.py  test_audits.py  test_feedback.py  test_introspection.py  test_jobs.py  test_pages.py  test_sites.py  test_snapshots.py
tests/factories/: __init__.py  audit.py  page.py  site.py  snapshot.py
tests/lighthouse/: conftest.py  test_admin.py  test_page.py  test_site.py  test_site_views.py  test_snapshot.py  test_views.py
tests/metrics/: conftest.py  test_admin.py  test_page.py  test_site.py  test_site_views.py  test_sitemaps.py  test_snapshot.py  test_snapshots.py  test_views.py
tests/node/: test_lighthouse_js.py
