[project]
name = "django-lighthouse"
version = "2023.01.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<4.3",
    "celery",
    "croniter",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django-extensions",
    "django_json_widget",
    "django-spaceless-templates",
    "django-storages",
    "django-watchman",
    "gunicorn",
    "ipython",
    "kaleido",
    "lxml",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "pydantic",
    "pymemcache",
    "python-dateutil",
    "python-json-logger",
    "requests",
    "sentry-sdk",
    "weasyprint",
    "whitenoise[brotli]",
]

[dependency-groups]
tests = [
    "filetype",
    "flake8",
    "isort",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-freezegun",
    "pytest-httpserver",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    "bumpver",
    "django-debug-toolbar",
    "django-stubs",
    "pre-commit",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
exclude = ["*/migrations/*"]

[tool.coverage.run]
branch = true
data_file = ".coverage"
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

default_section = "THIRDPARTY"
known_django = "django"
known_first_party = "project"
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_glob=[
    "*/migrations/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
FAIL_INVALID_TEMPLATE_VARS = true

addopts = "--strict-markers"

testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning:pytest_freezegun",
    "ignore::DeprecationWarning:kombu"
]

isort_ignore = [
    "*migrations/*.py"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.bumpver]
current_version = "v2023.01.0"
version_pattern = "vYYYY.0M.INC0"
#current_version = "v0.0.0"
#version_pattern = "vMAJOR.MINOR.PATCH"
commit = true
commit_message = "Bump version to {new_version}"
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]
"project/__init__.py" = [
    '^__version__ = "{version}"$',
]
"../docs/conf.py" = [
    '^copyright = "YYYY, Stuart MacKay"$',
    '^version = "vYYYY.0M"$',
    '^release = "{version}"$',
    #'^version = "MAJOR.MINOR"$',
    #'^release = "{version}"$',
]
