[project]
name = "django-lighthouse"
version = "2023.01.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "celery",
    "croniter",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django_json_widget",
    "django-spaceless-templates",
    "django-storages",
    "django-watchman",
    "gunicorn",
    "kaleido",
    "lxml",
    "pandas",
    "plotly",
    "psycopg[binary]",
    "pydantic",
    "redis",
    "python-dateutil",
    "python-json-logger",
    "requests",
    "sentry-sdk",
    "weasyprint",
    "whitenoise[brotli]",
]

[dependency-groups]
tests = [
    "filetype",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "time-machine",
    "pytest-httpserver",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    "bumpver",
    "django-debug-toolbar",
    "django-extensions",
    "django-stubs",
    "ipython",
    "pre-commit",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
exclude = ["*/migrations/*"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
exclude = ["*/migrations/*"]

[tool.coverage.run]
branch = true
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
FAIL_INVALID_TEMPLATE_VARS = true

addopts = "--strict-markers"

testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning:kombu"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.bumpver]
current_version = "v2023.01.0"
version_pattern = "vYYYY.0M.INC0"
commit = true
commit_message = "Bump version to {new_version}"
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]
"../docs/conf.py" = [
    '^copyright = "YYYY, Stuart MacKay"$',
    '^version = "vYYYY.0M"$',
    '^release = "{version}"$',
]
