[project]
name = "django-lighthouse"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "celery",
    "croniter",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django_json_widget",
    "django-spaceless-templates",
    "django-storages",
    "django-watchman",
    "gunicorn",
    "lxml",
    "psycopg[binary]",
    "pydantic",
    "redis",
    "python-dateutil",
    "python-json-logger",
    "requests",
    "sentry-sdk",
    "whitenoise[brotli]",
]

[dependency-groups]
tests = [
    "filetype",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "time-machine",
    "pytest-httpserver",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    "bump-my-version",
    "django-debug-toolbar",
    "flower",
    "django-extensions",
    "django-stubs",
    "ipython",
    "pre-commit",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
exclude = ["*/migrations/*"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
exclude = ["*/migrations/*"]

[tool.coverage.run]
branch = true
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
FAIL_INVALID_TEMPLATE_VARS = true

addopts = "--strict-markers -m 'not integration'"

markers = [
    "integration: full end-to-end tests that run Lighthouse (slow)",
]

pythonpath = [".", "apps"]

testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning:kombu"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version to v{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"
push = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## Unreleased"
replace = """## Unreleased


## v{new_version}"""
